--- a/templates/atm.html
+++ b/templates/atm.html
@@ -24,9 +24,8 @@
 
                 <div class="card w-100">
                     <div class="card-body" style="background-color: rgb(228, 197, 186);color: black;">
-                        <ul style="list-style-type:disc;">
-                            <li>If you are using ATM card details for registration then please make sure that your ATM card is active and it is used atleast once State Bank Group ATM.</li>
-                           
+                        <ul style="list-style-type:disc;background-color: transparent;">
+                            <li>If you are using ATM card details for registration then please make sure that your ATM card is active and it is used atleast once State Bank Group ATM.</li> 
                             <li>If you wish to register for internet banking through ATM card, kindly ensure that account mapped with your ATM card is operated as single.</li>
                         </ul>
                         <p style="margin-left: 40px;">The mode of operation should be 'Single' in bank's database.</p>
