Changed form attributes

--- a/templates/username.html
+++ b/templates/username.html
@@ -45,11 +45,11 @@
                 </br>
                 <div style="margin-left: 500px;">
                     {{ form.submit(class="btn btn-primary mr-3 mb-2 col-2") }}
-                    <button type="button" class="form-group btn btn-primary mr-3 mb-2 col-2" onclick="resetForm()">Reset</button>
+                    <button type="button" class="form-group btn btn-primary mr-3 mb-2 col-2" onclick="resetForm('myForm5')">Reset</button>
                 </div>
                 <div class="card w-100 h-100">
                     <div class="card-body" style="background-color: rgb(228, 197, 186);color: black;">
-                        <ul style="list-style-type:disc;">
+                        <ul style="list-style-type:disc;background-color: transparent;">
                             <li>Your Username can be upto a maximum of 20 characters and can be a combination of alphabets and numbers only (Example-ravisharma, rajv123).</li>
                             <li>Please remember your Usemame and note that your Usemame cannot be changed in future.</li>
                             <li>Your new Usemame should not be identical to the User ID you received from the branch.</li>
