--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,14 @@
 
 <main class="container">
   {# <!-- <div class="card" style="background-color: rgb(240, 234, 227);width: 100%;height: auto;"> --> #}
-    
+    {% for field, errors in form.errors.items() %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{ ', '.join(errors) }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
         <div class="section-content">
           <div class="card-header" style="height:4rem; background-color: rgb(212, 184, 111);">
             <h3 style="color: black;">User Registration</h3>
@@ -13,7 +20,7 @@
             <span class="req" style="margin-left: 20px;">*</span>Required
           </div>
           <div class="card-body" style="font-size: large;" >
-            <form id="myForm1" method="POST" action="/register" >
+            <form id="myForm1" method="POST" action="/register" novalidate>
               {{ form.hidden_tag }}
               <div class="form-row">
                 {{ form.accno.label(class="col-2",style="color: blue;")}}
