Created custom success messages

--- a/templates/success.html
+++ b/templates/success.html
@@ -6,7 +6,7 @@
           </div>
           <div class="card-body" style="font-size: large;" >
             <div class="card-body form-row" style="background-color: rgb(147, 197, 81);color: black;">
-                <p>Successfully registered for Internet Banking :)</p>
+                <p> {{ msg }}</p>
             </div></br></br>
             <div style="margin-left: 620px;">
               <button class="btn btn-primary col-1" onclick="location.href='home'">Close</button>
