--- a/templates/bank.html
+++ b/templates/bank.html
@@ -1,15 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
       <div class="card" style="background-color: rgb(240, 234, 227);width: 100%;height: auto;">
-        <div class="card-header" style="height:4rem; background-color: rgb(212, 184, 111);">
-            <h3 style="color: black;">Internet Banking Registration</h3>
-          </div>
+
           <div class="card-body" style="font-size: large;" >
             <div class="card-body form-row" style="background-color: rgb(211, 111, 86);color: black;">
                 <p>Please visit Bank and make sure that your ATM card is active and it is used atleast once State Bank Group ATM</p>
             </div></br></br>
             <div style="margin-left: 620px;">
-              <button class="btn btn-primary col-1" onclick="location.href='register'">Close</button>
+              <button class="btn btn-primary col-1" onclick="location.href='login'">Close</button>
             </div>
           </div>
         </div>      
