--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,8 +25,8 @@
   }
   
   .container {
-    width: 1000px;
-    margin: 0 auto;
+    width: 50px;
+    margin-left: 100px;
   }
   
   .pull-left {
