--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,16 @@ body {
   
 }
 
+/* #dropdownMenuButton1 {
+  background-color: transparent;
+  color: white;
+
+}
+
+#dropdownMenuButton1 a:hover{
+  background-color: rgb(154, 213, 228);
+
+} */
 /* .error-message {
   color: #db4437;
 } */
@@ -30,6 +40,21 @@ body {
   margin: 10px 0;
   color: #db4437;
 } */
+
+/* img {
+  margin-left: 550px;
+  width: auto; 
+  max-height: 100px; 
+ }
+ */
+
+ #dropdownMenuButton1 {
+  height: 52px;
+  padding: 13px;
+  background-color: transparent;
+  color: white;
+
+}
 
 ul {
   list-style-type: none;
@@ -54,6 +79,7 @@ li a {
 li a:hover:not(.active) {
   background-color: rgb(154, 213, 228);
 }
+
 
 .active {
   background-color: #04AA6D;
