--- a/templates/ddlayout.html
+++ b/templates/ddlayout.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   
     <link href="{{ url_for('static',filename='css/style.css') }}" rel="stylesheet">
-   <title>Pan Card</title>
+    <title>DD</title>
+   
 </head>
     <body>
         <script src="static/js/reset.js"></script>
           <div style="font-size: medium;">
             <div class="card-body" style="font-size: large;" >
-                <h3 style="color: black;background-color: rgb(212, 184, 111);height: 4rem;">PAN Registration</h3>
+                <h3 style="color: black;background-color: rgb(212, 184, 111);height: 4rem;">Demand Draft</h3>
                 <ul>
                     <li><a class="active" href="#createRequest">Create Request</a></li>
                     <li><a href="#Status">Status</a></li>
