--- a/templates/otp.html
+++ b/templates/otp.html
@@ -8,20 +8,21 @@
           </button>
       </div>
       {% endfor %}
+
       <div class="card" style="background-color: rgb(240, 234, 227);width: 100%;height: auto;">
         <div class="card-header" style="height:5rem; background-color: rgb(212, 184, 111);">
             <h3 style="color: black;">Enter the one time password sent to your mobile number.</h3>
         </div>
           <div style="font-size: medium;">
-            <br>
-            <span class="req" style="margin-left: 20px;">*</span>Required
+            </br>
+            <span class="req" style="margin-left: 20px;">*</span><p style="color: black;margin-top: -25px;margin-left: 30px;">Required</p>
           </div>
           <div class="card-body" style="font-size: large;" >
             <form id="myForm2" method="POST" action="{{ url_for('otp',param=param) }} " class="Form">
               {{ form.hidden_tag }}
                 <div class="form-row">
                   {{ form.otp.label(class="col-3",style="color: blue;")}}
-                  <span class="req" style="margin-left: -80px;margin-right: 100px;">*</span>
+                  <span class="req" style="margin-left: -90px;margin-right: 100px;">*</span>
                   {{ form.otp(class="col-3") }}
                 </div></br></br>
 
@@ -30,8 +31,8 @@
                 </div>
                 <div class="card w-100">
                     <div class="card-body" style="background-color: rgb(228, 197, 186);">
-                        <p style="color: black;">If you have not received the High security password on SMS then you can</p>
-                        {{ form.resend(class="form-group btn btn-primary mr-3 col-2") }}
+                        <p style="color: black;">If you have not received the High security password on SMS then you can click</p>
+                        <button type="button" class="form-group btn btn-primary mr-2 mb-2 col-1">Resend OTP</button>
                     </div>
                 </div>
             </form>
