--- a/templates/success.html
+++ b/templates/success.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
+
       <div class="card" style="background-color: rgb(240, 234, 227);width: 100%;height: auto;">
         <div class="card-header" style="height:4rem; background-color: rgb(212, 184, 111);">
-            <h3 style="color: black;">Internet Banking Registration</h3>
+            <h3 style="color: black;">Internet Banking</h3>
           </div>
           <div class="card-body" style="font-size: large;" >
             <div class="card-body form-row" style="background-color: rgb(147, 197, 81);color: black;">
