--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,16 +14,20 @@ body {
   
 }
 
-/* #dropdownMenuButton1 {
+#dropdownMenuButton1 {
+  height: 52px;
+  padding: 13px;
   background-color: transparent;
   color: white;
-
+  float: left;
 }
 
-#dropdownMenuButton1 a:hover{
-  background-color: rgb(154, 213, 228);
+#dropdownMenuButton1:hover{
 
-} */
+  background-color: rgb(154, 213, 228);
+  color: blue;
+
+}
 /* .error-message {
   color: #db4437;
 } */
@@ -35,6 +39,7 @@ body {
 .card-body .error-message {
   color: #db4437;
 }
+
 
 /* .card-body .error-message {
   margin: 10px 0;
@@ -48,13 +53,6 @@ body {
  }
  */
 
- #dropdownMenuButton1 {
-  height: 52px;
-  padding: 13px;
-  background-color: transparent;
-  color: white;
-
-}
 
 ul {
   list-style-type: none;
@@ -65,7 +63,7 @@ ul {
 }
 
 li {
-  float: left;
+  float: right;
 }
 
 li a {
@@ -80,9 +78,6 @@ li a:hover:not(.active) {
   background-color: rgb(154, 213, 228);
 }
 
-
 .active {
   background-color: #04AA6D;
 }
-
-  
