--- a/templates/login.html
+++ b/templates/login.html
@@ -23,11 +23,9 @@
           </div>
           <nav>
               <ul>
-                 <li>
-                    <a href="#">About Us</a>
-                 </li>
-                 <li><a href="#">Contact Us</a></li>
-                 <li><a href="#">Feedback</a></li>
+                <li><a href="#">Feedback</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">About Us</a></li>
               </ul>
            </nav>
       </div>
