--- a/templates/login.html
+++ b/templates/login.html
@@ -22,10 +22,14 @@
               <em class="fas fa-bars"></em>
           </div>
           <nav>
-              <ul>
-                <li><a href="#">Feedback</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">About Us</a></li>
+              <ul style="list-style-type: none;
+              margin: 0;
+              padding: 0;
+              overflow: hidden;
+              background-color: #04AA6D;">
+                <li style="float: right;"><a href="#">Feedback</a></li>
+                <li style="float: right;"><a href="contactus.html">Contact Us</a></li>
+                <li style="float: right;"><a href="#">About Us</a></li>
               </ul>
            </nav>
       </div>
