--- a/templates/panlayout.html
+++ b/templates/panlayout.html
@@ -11,9 +11,13 @@
           <div style="font-size: medium;">
             <div class="card-body" style="font-size: large;" >
                 <h3 style="color: black;background-color: rgb(212, 184, 111);height: 4rem;">PAN Registration</h3>
-                <ul>
-                    <li><a class="active" href="#createRequest">Create Request</a></li>
-                    <li><a href="#Status">Status</a></li>
+                <ul style="list-style-type: none;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+                background-color: #04AA6D;">
+                    <li style="float: left;"><a class="active" href="#createRequest">Create Request</a></li>
+                    <li style="float: left;"><a href="#Status">Status</a></li>
                 </ul>
                 <div style="border: solid 2px;padding: 20px;">
                     
