--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -54,7 +54,7 @@ body {
  */
 
 
-/* ul {
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -64,7 +64,7 @@ body {
 
 li {
   float: right;
-} */
+}
 
 li a {
   display: block;
