--- a/templates/ac5years.html
+++ b/templates/ac5years.html
@@ -1,34 +1,32 @@
-
 {% extends "layout.html" %}
 {% block content %}
-            {% for field, errors in form.errors.items() %}
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                {{ ', '.join(errors) }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            {% endfor %}
-            
-            <div class="card-header" style="height:4rem; background-color: rgb(212, 184, 111);">
-              <h3 style="color: black;">View Previous 5 years Account details</h3>
-            </div>
-            <div style="font-size: medium;">
-              </br>
-              <span class="req" style="margin-left: 20px;">*</span><p style="color: black;margin-top: -25px;margin-left: 30px;">Required</p>
-            </div>
-            <div class="card-body" style="font-size: large;" >
+
+<main class="container">
+  {% for field, errors in form.errors.items() %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{ ', '.join(errors) }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+        <div class="section-content">
+          <div class="card-header" style="height:4rem; background-color: rgb(212, 184, 111);">
+            <h3 style="color: black;">View Previous 5 years Account details</h3>
+          </div>
+
+          <div class="card-body" style="font-size: large;" >
             <form id="myForm6" class="Form" method="post" action="/acc" novalidate>
               
               {{ form.hidden_tag }}
                   <div class="form-row">
                   {{ form.acctype.label(class="col-3",style="color: blue;")}}
-                  <span class="req" style="margin-left: -335px;margin-right: 180px;">*</span>
+                  
                   {{ form.acctype(class="col-2") }}
                 </div></br>
                 <div class="form-row">
                     {{ form.period.label(class="col-3",style="color: blue;")}}
-                    <span class="req" style="margin-left: -255px;margin-right: 100px;">*</span>
+                    
                     {{ form.period(class="col-2") }}
                 </div></br></br>
                 <div style="text-align: center;">
