--- a/templates/addgst.html
+++ b/templates/addgst.html
@@ -1,37 +1,34 @@
 {% extends "layout.html" %}
 {% block content %}
-            {% for field, errors in form.errors.items() %}
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                {{ ', '.join(errors) }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            {% endfor %}
 
-            <div class="card-header" style="height:4rem; background-color: rgb(212, 184, 111);">
-              <h3 style="color: black;">Add GST Number</h3>
-            </div>
-
-            <div style="font-size: medium;">
-            </br>
-            <span class="req" style="margin-left: 20px;">*</span>Required
+<main class="container">
+  {% for field, errors in form.errors.items() %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{ ', '.join(errors) }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+        <div class="section-content">
+          <div class="card-header" style="height:4rem; background-color: rgb(212, 184, 111);">
+            <h3 style="color: black;">Add GST</h3>
           </div>
+         
+          <div class="card-body" style="font-size: large;" >
             <form id="myForm17" method="POST" action="/entergst" class="Form" novalidate style="font-size: large;">
               {{ form.hidden_tag }}
                   
                 <div class="form-row">
                   {{ form.pan.label(class="col-3",style="color: blue;")}}
-                  <span class="req" style="margin-left: -325px;margin-right: 180px;">*</span>
                   {{ form.pan(class="col-2") }}
                 </div></br>
                 <div class="form-row">
                     {{ form.gst.label(class="col-3",style="color: blue;")}}
-                    <span class="req" style="margin-left: -246px;margin-right: 100px;">*</span>
                     {{ form.gst(class="col-2") }}
                 </div></br></br>
                 <div style="margin-left: 500px;">
-                  {{ form.submit(class="btn btn-primary mr-3 mb-2 col-1") }}
+                  {{ form.submit(class="btn btn-primary mr-3 mb-2 col-2") }}
                 </div>
             </form>
           </div>
