--- a/templates/home.html
+++ b/templates/home.html
@@ -34,15 +34,19 @@
         <em class="fas fa-bars"></em>
       </div>
       <nav aria-label='navbar'>
-        <ul>
-          <li><form id="myForm16" method="POST" action="/home" novalidate>
-            <button type="submit" data-bs-toggle="tooltip" data-bs-html="true" title="LogOut"><img src="static/img/Logout.png" style="width: 45px;">
+        <ul style="list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #04AA6D;">
+          <li style="float: right;"><form id="myForm16" method="POST" action="/home" novalidate>
+            <button type="submit" data-bs-toggle="tooltip" data-bs-html="true" title="LogOut"><img src="static/img/Logout.png" style="background:transparent;width: 45px;">
             </button>
           </form></li>
           
-          <li><a href="#">Feedback</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">About Us</a></li>
+          <li style="float: right;"><a href="#">Feedback</a></li>
+          <li style="float: right;"><a href="">Contact Us</a></li>
+          <li style="float: right;"><a href="#">About Us</a></li>
           
           <li class="dropdown-toggle" type="button" id="dropdownMenuButton1"
             data-bs-toggle="dropdown" aria-expanded="false">User Service Request</li>
@@ -50,16 +54,28 @@
             <li style="float: left;"><a class="dropdown-item" href="{{ url_for('pancard') }}">Add PAN card</a></li><br>
             <li style="float: left;"><a class="dropdown-item" href="{{ url_for('ddreq') }}">Request DD</a></li><br>
             <li style="float: left;"><a class="dropdown-item" href="{{ url_for('stopcheque') }}">Stop payment on cheque</a></li><br>
-            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('cheque') }}">Request cheque</a></li>
+            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('cheque') }}">Request cheque</a></li><br>
+            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('entergst') }}">Enter GST</a></li>
+          
           </ul>
           <li class="dropdown-toggle" type="button" id="dropdownMenuButton1"
             data-bs-toggle="dropdown" aria-expanded="false">User Enquiry</li>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('view') }}">View Cheque Status</a></li><br>
-            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('acc') }}">View last 5 years account summary</a></li><br>
-            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('curprev') }}">View current and last month account summary</a></li><br>
-            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('accbal') }}">View Account Balance</a></li><br>
             
+            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('curprev') }}">View current and last month account summary</a></li><br>
+            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('accbal') }}">View Account Balance</a></li><br><br>
+            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('view') }}">View cheque status</a></li><br>
+            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('acc') }}">View last 5 years account summary</a></li><br>
+            
+            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('viewfdsummary') }}">View Fixed Deposit</a></li><br>
+            
+            
+          </ul> 
+          <li class="dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">Payments and Transfer</li>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('funds') }}">Funds Transfer</a></li><br>
+            <li style="float: left;"><a class="dropdown-item" href="{{ url_for('quick') }}">Quick Transfer</a></li><br>
           </ul> 
         </ul>
       </nav>
@@ -77,24 +93,21 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="static/img/back1.png" class="d-block w-100" alt="...">
+          <img src="static/img/back6.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            
           </div>
         </div>
         <div class="carousel-item">
           <img src="static/img/back.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            
           </div>
         </div>
         <div class="carousel-item">
-          <img src="static/img/avatar.png" class="d-block w-100" alt="...">
+          <img src="static/img/back1.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            
           </div>
         </div>
       </div>
