--- a/templates/panenter.html
+++ b/templates/panenter.html
@@ -1,34 +1,34 @@
-
 {% extends "panlayout.html" %}
 {% block content %}
-            {% for field, errors in form.errors.items() %}
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                {{ ', '.join(errors) }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            {% endfor %}
 
-    
-            <span class="req" style="margin-left: 3px;">*</span>Required</br></br>
+<main class="container">
+  {% for field, errors in form.errors.items() %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{ ', '.join(errors) }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+        <div class="section-content">
+          
+          <div class="card-body" style="font-size: large;" >
             <form id="myForm6" method="POST" action="/panenter" class="Form" novalidate>
               {{ form.hidden_tag }}
                   <p class="col-3" style="color: blue;">Your Account number </p> <div style="margin-top: -40px;"><strong style="margin-left: 240px;">{{ details[0] }}</b></div></br>
                   <p class="col-3" style="color: blue;">Your CIF number </p>  <div style="margin-top: -40px;"><strong style="margin-left: 240px;">{{ details[1] }}</b></div></br>
                 <div class="form-row">
                   {{ form.pan.label(class="col-3",style="color: blue;")}}
-                  <span class="req" style="margin-left: -335px;margin-right: 180px;">*</span>
                   {{ form.pan(class="col-2") }}
                 </div></br>
                 <div class="form-row">
                     {{ form.repan.label(class="col-3",style="color: blue;")}}
-                    <span class="req" style="margin-left: -255px;margin-right: 100px;">*</span>
                     {{ form.repan(class="col-2") }}
                 </div></br></br>
                 <div style="margin-left: 500px;">
-                  {{ form.submit(class="btn btn-primary mr-3 mb-2 col-1") }}
+                  {{ form.submit(class="btn btn-primary mr-3 mb-2 col-2") }}
                 </div>
+                
             </form>
           </div>
 {% endblock %}
