--- a/templates/requestdd.html
+++ b/templates/requestdd.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<main class="container1">
+<main class="container">
    {% for field, errors in form.errors.items() %}
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
         {{ ', '.join(errors) }}
@@ -10,10 +10,10 @@
         </button>
     </div>
     {% endfor %}
-    <div class="section-content1">
-        <div class="card-header1" style="height:4rem; background-color: rgb(212, 184, 111);">
-          <h3 style="color: black;">Request Demand Draft</h3>
-        </div>
+    <div class="section-content">
+      <div class="card-header" style="height:4rem; background-color: rgb(212, 184, 111);">
+        <h3 style="color: black;">Request DD</h3>
+      </div>
         <div style="font-size: medium;">
           </br>
           <span class="req" style="margin-left: 20px;">*</span>Required
@@ -21,22 +21,22 @@
         <div class="card-body" style="font-size: large;" >
           <form id="form1" method="POST" action="/ddreq" novalidate>
             {{ form.hidden_tag }}
-            <div class="form-row1">
+            <div class="form-row">
               {{ form.ano.label(class="col-2",style="color: blue;")}}
               <span class="req" style="margin-left: -105px;margin-right: 60px;">*</span>
               {{ form.ano(style="width: 375px;margin-left: 75px;")}}
             </div></br></br>
-            <div class="form-row1">
+            <div class="form-row">
               {{ form.bname.label(class="col-2",style="color: blue;")}}
               <span class="req" style="margin-left: -105px;margin-right: 100px;">*</span>
               {{ form.bname(style="width: 375px;margin-left: 35px;")}}
             </div></br></br>
-            <div class="form-row1">
+            <div class="form-row">
                 {{ form.amou.label(class="col-2",style="color: blue;")}}
                 <span class="req" style="margin-left: -150px;margin-right: 100px;">*</span>
                 {{ form.amou(style="width: 375px;margin-left:80px;")}}
               </div></br></br>
-              <div class="form-row1">
+              <div class="form-row">
                 {{ form.place.label(class="col-2",style="color: blue;")}}
                 <span class="req" style="margin-left: -80px;margin-right: 100px;">*</span>
                 {{ form.place(style="width: 375px;margin-left: 10px;")}}
